Use java 8 in e2e test